# lib/db/src/schema/actualites.ts
@@ -8,10 +8,12 @@ export const actualitesTable = pgTable("actualites" , {
   titre: varchar("titre", { length: 200 }).notNull(),
   titre_fr: varchar("titre_fr", { length: 200 }),
   titre_ar: varchar("titre_ar", { length: 200 }),
+  titre_en: varchar("titre_en", { length: 200 }),
   slug: varchar("slug", { length: 200 }).unique().notNull(),
   contenu: text("contenu").notNull(),
   contenu_fr: text("contenu_fr"),
   contenu_ar: text("contenu_ar"),
+  contenu_en: text("contenu_en"),
   image: varchar("image", { length: 500 }),
   categorie: varchar("categorie", { length: 100 }),
   datePublication: timestamp("date_publication").defaultNow().notNull(),
